# niuma-work

./: .gitignore  CHANGELOG.md  README.md  index.html
backend/: API_KEY_SECURITY_AUDIT.md  API_VALIDATION_ENHANCEMENT_REPORT.md  CONCURRENCY_FIX_REPORT.md  DATABASE_INDEX_OPTIMIZATION_REPORT.md  SECURITY_FIXES_2026-06-26.md  SQL_INJECTION_AUDIT_REPORT.md  auto_install_hermes.py  launcher.py  main.py  main.spec  pyproject.toml  test_api_endpoint_validation.py  test_api_key_simple.py  utils.py  verify_pool_config.py  version.py
backend/assets/: README.md
backend/config/: constants.py  logging_config.py  settings.py
backend/core/: exceptions.py
backend/db/: README_INDEXES.md  create_indexes.py  database.py  knowledge_schema.sql  repository.py  verify_indexes.py
backend/engine/: __init__.py  aba_anchor.py  agent_card.py  agent_registry.py  allocator_repository.py  asi_index.py  async_db.py  attention_engine.py  capability_flags.py  ccr_store.py  chat_hooks.py  closure_engine.py  context_drift.py  cross_workspace.py  dar_router.py  data_lifecycle.py  distillation.py  domain_knowledge.py  dynamic_balancer.py  dynamic_degradation.py  embedding_engine.py  emergence.py  engine_watchdog.py  execution_log.py  execution_repository.py  failure_driver.py  fallback_cost.py  goal_loop_engine.py  healing_tracker.py  hermes_adapter.py  honcho_modeler.py  hook_registry.py  hybrid_retrieval.py  instruction_cache.py  knowledge_quality.py  knowledge_repository.py  l3_knowledge.py  l3_profile.py  lazy_loader.py  llama_manager.py  (+31 more)
backend/middleware/: agent_auth.py  error_handler.py  (+6 more)
(+267 files in other folders)
