[project]
name = "super-niuma-backend"
version = "0.1.0"
description = "超级牛马 AI 工作台 — 后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.20.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "httpx>=0.24.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    # 桌面壳依赖
    "pywebview>=6.0.0,<7.0.0",
    "pythonnet>=3.0.0,<4.0.0",
    "clr-loader>=0.3.0,<1.0.0",
    "bottle>=0.13.0,<1.0.0",
    "cffi>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
